@@ -1,14 +1,18 @@
 package guru.springframework.spring5recipeapp.controllers;
 
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.web.servlet.ModelAndView;
 
 import guru.springframework.spring5recipeapp.commands.RecipeCommand;
+import guru.springframework.spring5recipeapp.exceptions.NotFoundException;
 import guru.springframework.spring5recipeapp.service.RecipeService;
 import lombok.extern.slf4j.Slf4j;
 
@@ -26,7 +30,7 @@ public class RecipeController {
 	public String showById(@PathVariable String id, Model model) {
 		//recipeService.findById(new Long(id));
 		System.out.println("#####In showById()######");
-		model.addAttribute("recipe",recipeService.findById(new Long(id)));
+		model.addAttribute("recipe",recipeService.findById(Long.valueOf(id)));
 		return "recipe/show";
 	}
 	
@@ -54,5 +58,27 @@ public class RecipeController {
 		recipeService.deleteById(Long.valueOf(id));
 		model.addAttribute("recipes", recipeService.getRecipes());
 		return "index";
+	}
+	@ResponseStatus(code = HttpStatus.NOT_FOUND)
+	@ExceptionHandler(NotFoundException.class)
+	public String handelNotFound(Model model,Exception ex)
+	{
+		System.out.println("In handelNotFound() of RecipeController class-GH32939");
+		log.error("In handelNotFound() of RecipeController class");
+		ModelAndView mnv = new ModelAndView();
+		mnv.setViewName("404error");
+		model.addAttribute("ex",ex);
+		return "404error";
+	}
+	@ResponseStatus(code=HttpStatus.BAD_REQUEST)
+	@ExceptionHandler(NumberFormatException.class)
+	public ModelAndView handelNumberFormat(NumberFormatException e)
+	{
+		System.out.println("In handelNumberFormat() of RecipeController class-GH32939");
+		log.error("In handelNumberFormat() of RecipeController class");
+		ModelAndView mnv = new ModelAndView();
+		mnv.addObject("e",e);
+		mnv.setViewName("400error");
+		return mnv;
 	}
 }
